; ModuleID = '/home/carl/AnghaBench/libgit2/tests/extr_clar.c_clar_test.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/extr_clar.c_clar_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @clar_test(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = load i8**, i8*** %4, align 8
  %8 = call i32 @clar_test_init(i32 %6, i8** %7)
  %9 = call i32 (...) @clar_test_run()
  store i32 %9, i32* %5, align 4
  %10 = call i32 (...) @clar_test_shutdown()
  %11 = load i32, i32* %5, align 4
  ret i32 %11
}

declare dso_local i32 @clar_test_init(i32, i8**) #1

declare dso_local i32 @clar_test_run(...) #1

declare dso_local i32 @clar_test_shutdown(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
